GWeatherInfo: survive without a cache dir

I'd argue that a missing/unwritable XDG_CACHE_HOME is a broken setup,
but people use that anyway, so let's warn and survive instead of
crashing.

https://bugzilla.gnome.org/show_bug.cgi?id=770979